--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
   <a href="#" class="close-menu">&times;</a>
   <h1>{{ site.name }}</h1>
   
-  <br>
-  This is just a basic 'github pages' site that you can create on github.<br>
+  <br>Dustin Christensen's Portfolio for CIT 261<br>
   <br>My username is gtjames<br>
   <br>I created a repo called <strong>gtjames.github.io</strong><br>
   Here I created an index.html page that let's me list all my work.<br>
   For instance I could put the following<br><br>
   <table>
-    <tr><td>My code links</td><td>Comments to Bro. James</td></tr>
+    <tr><td>Code Topics</td><td>Last Updated<td>Notes from Bro. James</td></tr>
     <tr><td><a href="{{ site.github.url }}/AJAX/AjaxTable.html">CSS Transitions and Transformations(not real)</a></td><td>Nov 4 - Ready for review.</td></tr>
     <tr><td><a href="{{ site.github.url }}/AJAX/tinyAJAX.html">CSS Animations(not real)</a></td><td>Jan 20 - Ready for Review</td></tr>
     <tr><td><a href="{{ site.github.url }}/JSON/json.html.html">JSON - This is a real example</a></td><td>Feb 12 - Not Reviewed'</td></tr>
