--- a/index.html
+++ b/index.html
@@ -1,37 +1,16 @@
 ---
 ---
 <nav id="main-navigation">
-  <a href="{{ site.github.url }}/AJAX/tinyAJAX.html">AJAX</a>
-  <a href="{{ site.github.url }}/domTree/domTree.html">Traversing the DOM tree</a>
-  <a href="{{ site.github.url }}/LocalStorage/ls_JSON.html">Local Storage with JSON</a>
-  <a href="{{ site.github.url }}/BoM/Bom.html">Book of Mormon word frequency</a>
-  <a href="{{ site.github.url }}/json/json.html">AJAX, JSON</a>
-  <a href="{{ site.github.url }}/casablanca.html">AJAX, JSON and LocalStorage - Casablanca info from IMDB</a>
-  <hr/>
-  Below is just the simplest way I can demonstrate what your portfolio pages <em>COULD</em> look like<br>
-  I just want a link I can click that will take me to a page that shows you have implemented what you have learned<br>
-  On each page you can tell me what is happening, if it is not obvious.<br>
-    <a href="{{ site.github.url }}/AJAX/tinyAJAX.html">AJAX</a>
-    <a href="{{ site.github.url }}/casablanca.html">AJAX, LocalStorage and JSON - Casablanca info from IMDB</a>
-    <a href="{{ site.github.url }}/CSSAnimations.html">CSS Animations</a>
-    <a href="{{ site.github.url }}/CSSTransitions.html">CSS Transitions</a>
-    <a href="{{ site.github.url }}/CSSTransformations.html">CSS Transformations</a>
-    <a href="{{ site.github.url }}/Events.html">HTML5 Events</a>
-    <a href="{{ site.github.url }}/AJAX.html">Local Storage</a>
+
 </nav>
 
 <header>
-  <a href="#main-navigation" class="open-menu">&#9776;</a>
-  <a href="#" class="close-menu">&times;</a>
   <h1>{{ site.name }}</h1>
   
   <br>Dustin Christensen's Portfolio for CIT 261<br>
-  <br>My username is gtjames<br>
-  <br>I created a repo called <strong>gtjames.github.io</strong><br>
-  Here I created an index.html page that let's me list all my work.<br>
-  For instance I could put the following<br><br>
+  
   <table>
-    <tr><td>Code Topics</td><td>Last Updated<td>Notes from Bro. James</td></tr>
+    <tr><strong><td>Code Topics</td><td>Last Updated<td>Notes from Bro. James</td></strong></tr>
     
     <tr><td><a href="{{ site.github.url }}/AJAX/AjaxTable.html">JavaScript</a></td>
       <td>NOT COMPLETED</td><td> Not Ready for review.</td></tr>
