--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 </nav>
 
 <header>
-  <h1>{{ site.name }}</h1>
   
-  <br>Dustin Christensen's Portfolio for CIT 261<br>
+  <h1>Dustin Christensen's Portfolio for CIT 261</h1>
   
   <table>
-    <tr><strong><td>Code Topics</td><td>Last Updated<td>Notes from Bro. James</td></strong></tr>
+    <tr><td><strong>Code Topics</strong></td><td><strong>Last Updated</strong></td>
+      <td><strong>Notes from Bro. James</strong></td></tr>
     
-    <tr><td><a href="{{ site.github.url }}/AJAX/AjaxTable.html">JavaScript</a></td>
-      <td>NOT COMPLETED</td><td> Not Ready for review.</td></tr>
+    <tr><td><a href="{{ site.github.url }}/javaScript.html">JavaScript</a></td>
+      <td>NOT COMPLETE</td><td> Not Ready for review.</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/AJAX/tinyAJAX.html">JavaScript Objects</a></td>
       <td>NOT COMPLETE</td><td>Not Ready for Review</td></tr>
