--- a/javaScript.html
+++ b/javaScript.html
@@ -1,11 +1,9 @@
 ---
 ---
-<nav id="main-navigation">
-
+<nav>
 </nav>
 
 <header>
-<h1>{{ site.name }}</h1>
 <h1>JavaScript</h1>
 <br>Loops, Conditional Statements, Functions, Variables, Parameters Arrays, Associative Arrays</br>
 </header>
