--- a/javaScript.html
+++ b/javaScript.html
@@ -5,5 +5,8 @@
 
 <header>
 <h1>JavaScript</h1>
+  <hr>
+  <a href"{{ site.github.url }}/index.html">Main Assignment Page</a>
+  <hr>
 <br>Loops, Conditional Statements, Functions, Variables, Parameters Arrays, Associative Arrays</br>
 </header>
