--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><strong>Notes from Bro. James</strong></td></tr>
     <hr>    
     <tr><td><a href="{{ site.github.url }}/javaScript.html">JavaScript</a></td>
-      <td>NOT COMPLETE</td><td> Not Ready for review.</td></tr>
+      <td>-NOT COMPLETE-</td><td>Not Ready for Review</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/AJAX/tinyAJAX.html">JavaScript Objects</a></td>
       <td>-NOT COMPLETE-</td><td>Not Ready for Review</td></tr>
