--- a/javaScript.html
+++ b/javaScript.html
@@ -9,7 +9,7 @@
 
 <h1>JavaScript Loops</h1>
 <hr>
-<a href="{{ site.github.url }}/index.html">Main Assignment Page</a>
+<a href="{{ site.github.url }}/">Main Assignment Page</a>
 <hr>
 <br>Loops, Conditional Statements, Functions, Variables, Parameters Arrays, Associative Arrays<br>
 <hr>
