--- a/javaScriptObject.html
+++ b/javaScriptObject.html
@@ -6,7 +6,7 @@
 <header>
 <h1>JavaScript Object</h1>
   <hr>
-  <a href"{{ site.github.url }}/index.html">Main Assignment Page</a>
+Object Creation Functions, Inhertance, Proterties, Methods, Instantiation
   <hr>
-<br>Object Creation Functions, Inhertance, Proterties, Methods, Instantiation<br>
+
 </header>
