--- a/cssClass.html
+++ b/cssClass.html
@@ -7,7 +7,7 @@
 <header>
 <h1>CSS Class Properties</h1>
   <hr>
-  <a href"{{ site.github.url }}/index.html">Main Assignment Page</a>
+Manipulating  CSS Class Properties Using JavaScript
   <hr>
-<br>Manipulating  CSS Class Properties Using JavaScript<br>
+
 </header>
