--- a/json.html
+++ b/json.html
@@ -6,7 +6,7 @@
 <header>
 <h1>JSON</h1>
   <hr>
-  <a href"{{ site.github.url }}/index.html">Main Assignment Page</a>
+Parse, Stringify
   <hr>
-<br>Parse, Stringify<br>
+
 </header>
