--- a/css3Transitions.html
+++ b/css3Transitions.html
@@ -6,6 +6,8 @@
 
 <header>
 <h1>CSS3 Transitions</h1>
-<br>Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries<br>
+  <hr>
+Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries
+  <hr>
 
 </header>
