--- a/dom.html
+++ b/dom.html
@@ -6,7 +6,7 @@
 <header>
 <h1>DOM</h1>
   <hr>
-  <a href"{{ site.github.url }}/index.html">Main Assignment Page</a>
+Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.
   <hr>
-<br>Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.<br>
+
 </header>
