--- a/javaScript.html
+++ b/javaScript.html
@@ -9,7 +9,7 @@
 
 <h1>JavaScript Loops</h1>
     <hr>
-<br>Loops, Conditional Statements, Functions, Variables, Parameters Arrays, Associative Arrays<br>
+Loops, Conditional Statements, Functions, Variables, Parameters Arrays, Associative Arrays
     <hr>
 <h2>For Loop</h2>
     
