--- a/css3Transfoms.html
+++ b/css3Transfoms.html
@@ -5,6 +5,8 @@
 
 <header>
 <h1>CSS3 Transforms</h1>
-<br>Desiging, Defining, and Triggering CSS3 Transforms without Custom Libraries<br>
+  <hr>
+Desiging, Defining, and Triggering CSS3 Transforms without Custom Libraries
+  <hr>
 
 </header>
