--- a/css3TransitionsAndAnimations.html
+++ b/css3TransitionsAndAnimations.html
@@ -1,4 +1,3 @@
-
 ---
 ---
 <nav>
@@ -6,6 +5,8 @@
 
 <header>
 <h1>CSS 3 Transitions and Animations</h1>
-<br>Creating CSS3 Transitions and Animations in CSS and Triggerling them with JavaScript<br>
+  <hr>
+Creating CSS3 Transitions and Animations in CSS and Triggerling them with JavaScript
+  <hr>
 
 </header>
