--- a/localStorage.html
+++ b/localStorage.html
@@ -6,7 +6,7 @@
 <header>
 <h1>Local Storage</h1>
   <hr>
-  <a href"{{ site.github.url }}/index.html">Main Assignment Page</a>
+API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects
   <hr>
-<br>API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects<br>
+
 </header>
