--- a/css3Animations.html
+++ b/css3Animations.html
@@ -5,6 +5,8 @@
 
 <header>
 <h1>CSS3 Animations</h1>
-<br>Desiging, Defining, and Triggering CSS3 Animations without Custom Libraries<br>
+  <hr>
+Desiging, Defining, and Triggering CSS3 Animations without Custom Libraries
+  <hr>
 
 </header>
