--- a/javaScript.html
+++ b/javaScript.html
@@ -26,7 +26,8 @@ Loops, Conditional Statements, Functions, Variables, Parameters Arrays, Associat
 <p2 id="loop2"></p2>
 
 <h2>DO/WHILE Loop</h2>
-<h3>From the first generated sentence please select a word.</h3>
+<h3>From the first generated sentence please select a segment, 
+    what is between the spaces, exactly.</h3>
 
 <input oninput="loopExample3(this.value);" size="7" />
 <br>
