--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <td><strong>Notes from Bro. James</strong></td></tr>
     
     <tr><td><a href="{{ site.github.url }}/javaScript.html">JavaScript</a></td>
-      <td>-NOT COMPLETE-</td><td>Not Ready for Review</td></tr>
+      <td>-October 1, 2018-</td><td>-Ready for Review-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/javaScriptObject.html">JavaScript Objects</a></td>
       <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
