--- a/javaScript.html
+++ b/javaScript.html
@@ -105,12 +105,11 @@ Verb:
     <br>
     <br>
 Hello, my name is 
-    <p12 id="assoc1"></p12> <p13 id="assoc2"></p13>
+    <p12 id="assoc1" style="color:red;" ></p12> <p13 id="assoc2" style="color:red;"></p13>
 and people say that I am like a 
-    <p14 id="assoc3"></p14> <p15 id="assoc4"></p15>
+    <p14 id="assoc3" style="color:red;"></p14> <p15 id="assoc4" style="color:red;"></p15>
 that can
-    <p16 id="assoc5"></p16>
-
+    <p16 id="assoc5" style="color:red;"></p16>
     <br>
     <br>
     <br>
