--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <td>-October 1, 2018-</td><td>-Ready for Review-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/javaScriptObject.html">JavaScript Objects</a></td>
-      <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
+      <td>-October 5, 2018-</td><td>-Ready for Review-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/cssClass.html">CSS Class Properties Using JaveScript</a></td>
       <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
