--- a/javaScriptObject.html
+++ b/javaScriptObject.html
@@ -55,6 +55,7 @@ Object Creation Functions, Inheritance, Properties, Methods, Instantiation
         <br>
         <br>
 <h3>Silly Sentence, using JavaScript Objects</h3>
+    <h4>Change the characteristics for each button</h4>
 
     Provide a noun: <input type="text" id="noun1" size="13">
     Provide a plural noun: <input type="text" id="noun2" size="13">
@@ -66,10 +67,25 @@ Object Creation Functions, Inheritance, Properties, Methods, Instantiation
     Provide another adjective: <input type="text" id="adj2" size="13">
         <br>
         <br>
+    <p3a style="color: red">Click to load the first set of variables</p3a>
     <input type="button" onclick="properties(document.getElementById('noun1').value, document.getElementById('noun2').value, document.getElementById('verb1').value, document.getElementById('verb2').value, document.getElementById('adj1').value, document.getElementById('adj2').value);" value="Display">
         <br>
         <br>
     <p3 id="prop"></p3>
+        <br>
+        <br>
+    <p3a style="color: red">Click to load the second set of variables</p3a>
+    <input type="button" onclick="properties2(document.getElementById('noun1').value, document.getElementById('noun2').value, document.getElementById('verb1').value, document.getElementById('verb2').value, document.getElementById('adj1').value, document.getElementById('adj2').value);" value="Display">
+        <br>
+        <br>
+    <p3 id="prop2"></p3>
+        <br>
+        <br>
+    <p3a style="color: red">Click to load the third set of variables</p3a>
+    <input type="button" onclick="properties3(document.getElementById('noun1').value, document.getElementById('noun2').value, document.getElementById('verb1').value, document.getElementById('verb2').value, document.getElementById('adj1').value, document.getElementById('adj2').value);" value="Display">
+        <br>
+        <br>
+    <p3 id="prop3"></p3>
         <br>
         <br>
         <br>
