--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@
 The JS examples were sufficient for this topics. We will see them many more times in the weeks ahead-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/javaScriptObject.html">JavaScript Objects</a></td>
-      <td>-October 6, 2018-</td><td>-Ready to be re-Reviewed - This is a great example of JS but the JS Object is very minimal. A JSO should be a object you can create multiple instances. Your sentencesInput object. Is technically an JSO but is a stand alone JSO. What you should be looking for are ways to create an JSO based on a function. i.e.
-function Person(first, last, age, eye) {
-    this.firstName = first;
-    this.lastName = last;
-    this.age = age;
-    this.eyeColor = eye;
-}
-This takes a simple JSO object (which is often little more than a JSON variable) and makes it a true Object. You can create multiple instances each with their own unique values in the properties..-</td></tr>
+      <td>-October 6, 2018-</td><td>-excellent - great variety. I like multiple examples. good job-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/cssClass.html">CSS Class Properties Using JaveScript</a></td>
       <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
