--- a/cssClass.html
+++ b/cssClass.html
@@ -2,7 +2,7 @@
 <html lang="eng-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>JavaScript</title>
+    <title>CSS Manipulated via JavaScript</title>
     <link id="selectCSS" rel="stylesheet" type="text/css" href="default.css">
     <script type="text/javascript" src="cssClass.js" ></script>
 </head>
