--- a/cssClass.html
+++ b/cssClass.html
@@ -2,7 +2,7 @@
 <html lang="eng-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>CSS Manipulated via JavaScript</title>
+    <title>CSS manipulated via JavaScript</title>
     <link id="selectCSS" rel="stylesheet" type="text/css" href="default.css">
     <script type="text/javascript" src="cssClass.js" ></script>
 </head>
@@ -22,20 +22,24 @@ Manipulating  CSS Class Properties Using JavaScript
     <br>
 <h2 id="size1">Changing the SIZE of text</h2>
     <p>Select a size:</p>
-        <input type="radio" oninput="textSize(0);">7 px
-        <input type="radio" oninput="textSize(1);">17 px
-        <input type="radio" oninput="textSize(2);">50 px
-        <input type="radio" oninput="textSize(3);">Default
+        <form>
+            <input type="radio" name="size" oninput="textSize(0);">7 px
+            <input type="radio" name="size" oninput="textSize(1);">17 px
+            <input type="radio" name="size" oninput="textSize(2);">50 px
+            <input type="radio" name="size" oninput="textSize(3);">Default
+        </form>
     <br>
     <br>
 <h2>Changing CSS style sheet</h2>
     <p>Select a CSS style sheet:</p>
-        <select onchange="cssSheet(this.value);">
-            <option value="default.css">Default</option>
-            <option value="dark.css">CSS Dark</option>
-            <option value="light.css">CSS Light</option>
-            <option value="different.css">CSS Different</option>
-        </select>
+        <form>
+            <select onchange="cssSheet(this.value);">
+                <option value="default.css">Default</option>
+                <option value="dark.css">CSS Dark</option>
+                <option value="light.css">CSS Light</option>
+                <option value="different.css">CSS Different</option>
+            </select>
+        </form>
     <br>
     <br>
 <h2 id="color1">Changing IMAGES</h2>
@@ -46,26 +50,28 @@ Manipulating  CSS Class Properties Using JavaScript
     <br>
 <h2>Changing CSS attributes by hovering</h2>
     <p>Hover the mouse over a color:</p>
+    <form>
         <table style="width:500px;height:100px">
-  <tr>
-    <td onmouseover="cssBGColor(this.style.backgroundColor)" 
-        onmouseout="cssBGColor('white')"
-        style="background-color:yellowgreen">
-    </td>
-    <td onmouseover="cssBGColor(this.style.backgroundColor)" 
-        onmouseout="cssBGColor('white')"
-        style="background-color:purple">
-    </td>
-    <td onmouseover="cssBGColor(this.style.backgroundColor)" 
-        onmouseout="cssBGColor('white')"
-        style="background-color:red">
-    </td>
-    <td onmouseover="cssBGColor(this.style.backgroundColor)" 
-        onmouseout="cssBGColor('white')"
-        style="background-color:cornflowerblue">
-    </td>
-  </tr>
-</table>
+            <tr>
+                <td onmouseover="cssBGColor(this.style.backgroundColor)" 
+                    onmouseout="cssBGColor('white')"
+                    style="background-color:yellowgreen">
+                </td>
+                <td onmouseover="cssBGColor(this.style.backgroundColor)" 
+                    onmouseout="cssBGColor('white')"
+                    style="background-color:purple">
+                </td>
+                <td onmouseover="cssBGColor(this.style.backgroundColor)" 
+                    onmouseout="cssBGColor('white')"
+                    style="background-color:red">
+                </td>
+                <td onmouseover="cssBGColor(this.style.backgroundColor)" 
+                    onmouseout="cssBGColor('white')"
+                    style="background-color:cornflowerblue">
+                </td>
+            </tr>
+        </table>
+    </form>
     <br>
     <br>
     <br>
