--- a/cssClass.html
+++ b/cssClass.html
@@ -50,7 +50,7 @@ Manipulating  CSS Class Properties Using JavaScript
     <br>
 <h2>Changing CSS attributes by hovering</h2>
     <p>Hover the mouse over a color:</p>
-    <form>
+    <form id="background" style="height: 300px">
         <table style="width:500px;height:100px">
             <tr>
                 <td onmouseover="cssBGColor(this.style.backgroundColor)" 
