--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ The JS examples were sufficient for this topics. We will see them many more time
       <td>-October 6, 2018-</td><td>-excellent - great variety. I like multiple examples. good job-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/cssClass.html">CSS Class Properties Using JaveScript</a></td>
-      <td>-October 8, 2018-</td><td>-Ready for Review-</td></tr>
+      <td>-October 8, 2018-</td><td>-good variety using JS to change the styles.-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/json.html">JSON</a></td>
       <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
