--- a/tagsHTML5.html
+++ b/tagsHTML5.html
@@ -22,7 +22,7 @@ Video, Audio, and Canvas
     <br>
     <br>
 <video id="GOW" width="800" height="400" controls loop>
-    <source src="God-of-War-TV.MP4" type="video/mp4">
+    <source src="God-of-War–TV.mp4" type="video/mp4">
 </video>
 
 <h2>Enjoy this Video Example Pulled from YouTube</h2>
