--- a/tagsHTML5.html
+++ b/tagsHTML5.html
@@ -50,6 +50,9 @@ Video, Audio, and Canvas
 <button onclick="printImage()" type="button">Add an Image</button>
     <br>
     <br>
+<h3 id="messThankYou"></h3>
+    <br>
+    <br>
     <br>
     <br>
 </body>
