--- a/json.html
+++ b/json.html
@@ -33,8 +33,11 @@ Years: <input id="years" type="text" size="3">
         <br>
         <br>
 <input type="button" onclick="inputData()" value="Enter and display Data">
-<p id="parsing3"></p>    
-
+<p id="parsing3"></p>
+        <br>
+        <br>
+<input type="button" onclick="stringifiedVariable()" value="Display Stringified Data">
+<p id="parsing4"></p>
     
     
 </body>
