--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ The JS examples were sufficient for this topics. We will see them many more time
       <td>-October 15, 2018-</td><td>-excellent examples!-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/css3Transfoms.html">CSS3 Transforms</a></td>
-      <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
+      <td>-October 22, 2018-</td><td>-Ready for Review-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/css3Transitions.html">CSS3 Transitions</a></td>
       <td>-NOT COMPLETE-</td><td>-Not Ready for Review-</td></tr>
