--- a/css3Transitions.html
+++ b/css3Transitions.html
@@ -1,12 +1,88 @@
----
----
-<nav>
-</nav>
+<!DOCTYPE html>
+<html lang="eng-US">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>CSS3 Transforms without Custom Libraries</title>
+    <link id="stylePage" rel="stylesheet" type="text/css" href="css3Animations.css"/>
+    <script type="text/javascript" src="javaScriptEvents.js"></script>
+</head>
+<body>
 
-<header>
-<h1>CSS3 Transitions</h1>
-  <hr>
-Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries
-  <hr>
-
-</header>
+<h1>CSS3 Transition</h1>
+    <hr>
+Designing, Defining, and Triggering without Custom Libraries
+    <hr>
+<h2>Transitioning width and height, and sometimes into different Shapes</h2>
+    <div class="a">Square to Rectangle</div>
+    <div class="b">Small Circle to Bigger Oval</div>
+    <div class="a1">Square to bigger Square</div>
+    <div class="a2">Small Circle to smaller Circle</div>
+    <div class="b2">Square into a Oval</div>
+    <div class="b1">Circle into a Rectangle</div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+<h2>Animating Shapes</h2>
+    <div id= "flip" class="c" onmouseover="flipIT();" onmouseout="stopFlipIT();" style="margin-left: 27px; padding: 13px; background-color: red; width: 200px; height: 125px; color: white; text-align: center">
+        <h1>Flipping a shape</h1>
+        <p>Inspired by Cory!!!</p>
+    </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+<h2>Examples of Animation-Timing-Function moving across the screen</h2>
+    <div class="d1" id="ch1" style="background-color: red;" onclick="travel1()">
+        linear</div>
+    <div class="d2" id="ch2" style="background-color: brown;" onclick="travel2()">
+        ease</div>
+    <div class="d3" id="ch3" style="background-color: orange;" onclick="travel3()">
+        ease-in</div>
+    <div class="d4" id="ch4" style="background-color: tan;" onclick="travel4()">
+        ease-out</div>
+    <div class="d5" id="ch5" style="background-color: lightgray;" onclick="travel5()">
+        ease-in-out</div>
+        <br>
+<h3 style="text-align: center;">Click a moving object to Observe a change</h3>
+    <p style="text-align: center;">I would suggest starting from the top</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
