--- a/css3Transitions.html
+++ b/css3Transitions.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>CSS3 Transforms without Custom Libraries</title>
     <link id="stylePage" rel="stylesheet" type="text/css" href="css3Animations.css"/>
-    <script type="text/javascript" src="javaScriptEvents.js"></script>
+    <script type="text/javascript" src="css3TransitionsAndAnimations.js"></script>
 </head>
 <body>
 
