--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ The JS examples were sufficient for this topics. We will see them many more time
       <td>-October 8, 2018-</td><td>-good variety using JS to change the styles.-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/json.html">JSON</a></td>
-      <td>-October 17, 2018-</td><td>-Ready for Review-</td></tr>
+      <td>-October 17, 2018-</td><td>-Well Done!!-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/tagsHTML5.html">HTML5 Tags</a></td>
       <td>-October 15, 2018-</td><td>-excellent examples!-</td></tr>
