--- a/ajax.html
+++ b/ajax.html
@@ -17,6 +17,7 @@ Taking a JSON file, throwing it in to LOCALSTORAGE API, Update the LOCALSTORAGE 
     <hr>
 <center>
     <h2>JavaScript GET Request Test upon submitting user input from website</h2>
+    <h3>GitHub blocks access to the website that is used in this site. Feel free to download and try it on your own system.</h3>
         <br>
     <form action="">
         <select name="ipAddress" onchange="changeIP(this.value)">
