--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I usually only give 8 without using the examples in an application but you have 
       <td>-October 30, 2018-</td><td>-good variety. thanks-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/ajax.html">Local Storage</a></td>
-      <td>-Npvember 07, 2018-</td><td>-Ready for Review-</td></tr>
+      <td>-November 07, 2018-</td><td>-Ready for Review-</td></tr>
     
     <tr><td><a href="{{ site.github.url }}/css3Transitions.html">CSS3 Animations</a></td>
       <td>-October 30, 2018-</td><td>-you have some very good animations.
