--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ I usually only give 8 without using the examples in an application but you have 
     <tr><td><a href="{{ site.github.url }}/css3Transitions.html">CSS3 Animations</a></td>
       <td>-October 30, 2018-</td><td>-you have some very good animations.
       Next use them in an application with a purpose.-</td></tr>
+    <tr><td><a href="{{ site.github.url }}/chores.html">Final Project First Submission</a></td>
+      <td>-December 01, 2018-</td><td>-Not Ready-</td></tr>
+    
   </table>
   <br><br>
   </header>
